--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2101,3 +2101,96 @@
  "nbformat": 4,
  "nbformat_minor": 5
 }
+
+   "source": [
+    "#On reconstitue le modèle multiple sur lequelle nous allons faire des tests\n",
+    "vars_x = [\n",
+    "    \"Surface_m2\",\"Chambres\",\"Annee_construction\",\"Distance_centre_km\",\n",
+    "    \"Etage\",\"Ascenseur\",\"Annee_vente\",\"Qualite_ecole\",\"Revenu_median_quartier\"\n",
+    "]\n",
+    "\n",
+    "df_reg = df.dropna(subset=[TARGET] + vars_x).copy()\n",
+    "\n",
+    "X = sm.add_constant(df_reg[vars_x])\n",
+    "y = df_reg[TARGET]\n",
+    "\n",
+    "model_mult = sm.OLS(y, X).fit()\n",
+    "model_mult.summary()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0b9f57c",
+   "metadata": {},
+   "source": [
+    "### 4.1.1 Test : la distance au centre a-t-elle un effet négatif sur le prix ?\n",
+    "\n",
+    "**Étape 1 — Formulation des hypothèses**\n",
+    "\n",
+    "On souhaite tester si la distance au centre-ville a un effet négatif sur le prix des logements.\n",
+    "\n",
+    "Hypothèse nulle :  \n",
+    "H0 : β_Distance_centre_km ≥ 0  \n",
+    "(la distance au centre n’a pas d’effet négatif sur le prix)\n",
+    "\n",
+    "Hypothèse alternative :  \n",
+    "H1 : β_Distance_centre_km < 0  \n",
+    "(la distance au centre a un effet négatif sur le prix)\n",
+    "\n",
+    "Ce test est un test unilatéral à gauche.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "1a3b9ac6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "beta_distance = -7.056502851202567\n",
+      "t-stat = -9.795534946840672\n",
+      "p-value (one-sided, H1: beta < 0) = 7.068721187319874e-18\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = model_mult.tvalues[\"Distance_centre_km\"]\n",
+    "p_two = model_mult.pvalues[\"Distance_centre_km\"]\n",
+    "\n",
+    "# p-value unilatérale pour H1: beta < 0\n",
+    "p_one = p_two/2 if t < 0 else 1 - p_two/2\n",
+    "\n",
+    "beta = model_mult.params[\"Distance_centre_km\"]\n",
+    "\n",
+    "print(\"beta_distance =\", beta)\n",
+    "print(\"t-stat =\", t)\n",
+    "print(\"p-value (one-sided, H1: beta < 0) =\", p_one)\n"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.0"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
