Fix comment formatting in notebook.ipynb

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -438,7 +438,7 @@
     "ID = \"ID\"\n",
     "TARGET = \"Prix_milliers_euros\"\n",
     "binary = [\"Ascenseur\"]\n",
-    "discrete = [\"Chambres\", \"Etage\", \"Qualite_ecole\"]  # Qualite_ecole = score (ordonné), discutable mais OK ici\n",
+    "discrete = [\"Chambres\", \"Etage\", \"Qualite_ecole\"]  # Qualite_ecole = score (ordonné),\n",
     "continuous = [\"Surface_m2\", \"Distance_centre_km\", \"Revenu_median_quartier\", \"Distance_universite\"]\n",
     "time = [\"Annee_construction\", \"Annee_vente\"]  # variables temporelles (numériques mais interprétation spécifique)\n",
     "features = binary + discrete + continuous + time\n",
