Update comment for new housing prediction

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -6876,7 +6876,7 @@
     " 'Annee_construction'\n",
     "]\n",
     "\n",
-    "# 2) Nouveau logement à prédire (ATTENTION: pas de Etage ici)\n",
+    "# 2) Nouveau logement à prédire \n",
     "X_new = pd.DataFrame([{\n",
     "    \"Surface_m2\": 120,\n",
     "    \"Distance_centre_km\": 5,\n",
